Light Scrollbar Design Fix
Minor, invert arrow color

--- a/stuff/config/qss/Default/less/themes/Light.less
+++ b/stuff/config/qss/Default/less/themes/Light.less
@@ -78,6 +78,8 @@
 @scrollbar-bg-color: darken(@bg, 7);
 
 // Handle
+@scrollbar-handle-radius: 2;
+@scrollbar-handle-margin: 2;
 @scrollbar-handle-bg-color: lighten(@bg, 12);
 @scrollbar-handle-border-color: darken(@scrollbar-bg-color, 10);
 @scrollbar-handle-border-color-hover: @accent;
